...
    var userInterface : ListViewInterface?
    
    var isOffsetAPIInProgress = false
    
    func updateView() {
        listInteractor?.findResultsForInitialView()
        self.userInterface?.updateTitle(NSLocalizedString("Search", comment: "title for search page"))
    }
    
    func updateViewWithSearchQuery(_ query : String) {
        self.listInteractor?.findResultsForKeyword(query: query)
        UIApplication.shared.isNetworkActivityIndicatorVisible = true
    }
...
